--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -136,21 +136,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-  &__checkbox {
-    display: inline-block;
-    width: 16px;
-    height: 15px;
-    border: 2px solid #212121;
-    margin-right: 8px;
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
 }
+.label__checkbox {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  margin-right: 8px;
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .label__input:checked + .label__checkbox {
   border-color: transparent;
-  background-color: icon-accent-color;
+  background-color: $icon-accent-color;
   background-image: url('../images/icon-check.svg');
   background-repeat: no-repeat;
   background-size: contain;
